dictionary, collections, translations

--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,7 @@
     "Conversion from Array to Collection",
     "searching and filtering in Collection"
   ],
-  "homepage": "https://github.com/tom-sapletta-com/helpers",
+  "homepage": "https://github.com/pfpfunc-com/helpers",
   "authors": [
     {
       "name": "Tomasz Sapletta",
